[project]
name = "business-project-in-computer-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash[cloud]>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "kagglehub>=0.3.13",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
]
